# FLXTRA

./: .gitignore  Cargo.toml  MARCELINE_FULL.sh  README.md  vibecoder.py
aegis_browser/: Cargo.toml
aegis_browser/src/: browser.rs  engine.rs  lib.rs  main.rs  tab.rs
aegis_core/: Cargo.toml
aegis_core/src/: config.rs  error.rs  ipc.rs  lib.rs  types.rs
aegis_css/: Cargo.toml
aegis_css/src/: computed.rs  lib.rs  values.rs
aegis_filter/: Cargo.toml
aegis_filter/src/: engine.rs  lib.rs  rules.rs
aegis_html/: Cargo.toml
aegis_html/src/: dom.rs  lib.rs  tree.rs
aegis_js/: Cargo.toml
aegis_js/src/: builtins.rs  lib.rs  runtime.rs  value.rs
aegis_layout/: Cargo.toml
aegis_layout/src/: lib.rs  tree.rs
aegis_mcp/: Cargo.toml
aegis_mcp/src/: capabilities.rs  client.rs  lib.rs  protocol.rs
aegis_net/: Cargo.toml
aegis_net/src/: client.rs  dns.rs  http.rs  lib.rs
aegis_render/: Cargo.toml
aegis_render/src/: display_list.rs  lib.rs  painter.rs
aegis_sandbox/: Cargo.toml
aegis_sandbox/src/: container.rs  lib.rs
aegis_ui/: Cargo.toml
aegis_ui/src/: events.rs  lib.rs  window.rs
doom64-llm-os/: .gitignore  Cargo.toml  README.md
doom64-llm-os/ai/: Cargo.toml
doom64-llm-os/ai/src/: compute.rs  fat32.rs  inference.rs  lib.rs  loader.rs  quantization.rs
doom64-llm-os/docs/: BUILD.md  SPEC.md
doom64-llm-os/game/: Cargo.toml
doom64-llm-os/game/src/: engine.rs  input.rs  lib.rs  render.rs  wad_loader.rs
doom64-llm-os/iso/boot/grub/: grub.cfg
doom64-llm-os/kernel/: Cargo.toml  build.rs  linker.ld
doom64-llm-os/kernel/.cargo/: config.toml
doom64-llm-os/kernel/src/: gdt.rs  interrupts.rs  io.rs  keyboard.rs  main.rs  memory.rs  power.rs  scheduler.rs  vga.rs
doom64-llm-os/scripts/: build_iso.sh  build_wrapper.sh  extract_assets.sh  test_qemu.sh
flxtra_browser/: Cargo.toml
flxtra_browser/src/: agent_scanner.js  ai_panel.html  browser.rs  engine.rs  landing.html  lib.rs  main.rs  sidebar.html  tab.rs
flxtra_core/: Cargo.toml
flxtra_core/src/: config.rs  error.rs  lib.rs  types.rs
flxtra_css/: Cargo.toml
flxtra_css/src/: lib.rs  parser.rs  properties.rs  selector_map.rs  stylesheet.rs  values.rs
flxtra_filter/: Cargo.toml
flxtra_filter/src/: engine.rs  lib.rs  parser.rs
flxtra_html/: Cargo.toml
flxtra_html/src/: lib.rs  parser.rs
flxtra_js/: Cargo.toml
flxtra_js/src/: ast.rs  context.rs  lexer.rs  lib.rs  parser.rs
flxtra_layout/: Cargo.toml
flxtra_layout/src/: box_model.rs  engine.rs  lib.rs  tree.rs
flxtra_mcp/: Cargo.toml
flxtra_mcp/src/: lib.rs
flxtra_net/: Cargo.toml
flxtra_net/src/: client.rs  dns.rs  http.rs  lib.rs
flxtra_render/: Cargo.toml
flxtra_render/src/: d2d.rs  display_list.rs  lib.rs  painter.rs
flxtra_sandbox/: Cargo.toml
flxtra_sandbox/src/: container.rs  lib.rs  policy.rs
flxtra_ui/: Cargo.toml
flxtra_ui/src/: chrome.rs  events.rs  lib.rs  pages.rs  window.rs
flxtra_web/: package-lock.json  package.json
flxtra_web/app/: globals.css  layout.tsx  page.tsx
flxtra_web/components/: BrowserFrame.tsx  Sidebar.tsx
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/: Local State
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/Default/: BrowsingTopicsState  DIPS  History  Preferences  Secure Preferences
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/Default/DawnGraphiteCache/: data_1  index
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/Default/DawnWebGPUCache/: data_1  index
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/Default/Extension Rules/: LOG
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/Default/Extension Scripts/: LOG
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/GrShaderCache/: data_0  data_1  index
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/GraphiteDawnCache/: data_1  index
flxtra_web/user_data/tab_06cdb55f-fdd3-4200-9b4b-3561b68a35e0/EBWebView/ShaderCache/: data_1  index
flxtra_web/user_data/tab_80210996-0f49-4cbe-b0ae-9ffde147b57e/EBWebView/: Local State
flxtra_web/user_data/tab_80210996-0f49-4cbe-b0ae-9ffde147b57e/EBWebView/Default/: BrowsingTopicsState  DIPS  Preferences  Secure Preferences
flxtra_web/user_data/tab_80210996-0f49-4cbe-b0ae-9ffde147b57e/EBWebView/GrShaderCache/: data_0  data_1  index
flxtra_web/user_data/tab_80210996-0f49-4cbe-b0ae-9ffde147b57e/EBWebView/GraphiteDawnCache/: index
flxtra_web/user_data/tab_80210996-0f49-4cbe-b0ae-9ffde147b57e/EBWebView/ShaderCache/: index
flxtra_web/user_data/tab_a82b4c62-48f6-49aa-906c-adbd814975da/EBWebView/: Local State
flxtra_web/user_data/tab_a82b4c62-48f6-49aa-906c-adbd814975da/EBWebView/Default/: BrowsingTopicsState  DIPS  History  Preferences  Secure Preferences
flxtra_web/user_data/tab_a82b4c62-48f6-49aa-906c-adbd814975da/EBWebView/GrShaderCache/: data_0  data_1  f_000002  index
flxtra_web/user_data/tab_a82b4c62-48f6-49aa-906c-adbd814975da/EBWebView/GraphiteDawnCache/: index
flxtra_web/user_data/tab_a82b4c62-48f6-49aa-906c-adbd814975da/EBWebView/ShaderCache/: index
marceline-ai/: .gitignore  README.md  START_MARCELINE.bat  install_linux.sh  install_windows.bat  marceline_windows.py  mcp-config.json  package-lock.json  package.json  run_marceline.bat  run_voice.bat
marceline-ai/backend/: .env.example  package-lock.json  package.json
marceline-ai/backend/src/: server.ts
marceline-ai/backend/src/api/: claude-handler.ts
marceline-ai/backend/src/config/: environment.ts
marceline-ai/backend/src/database/: connection.ts  services.ts
marceline-ai/backend/src/mcp/: mcp-manager.ts
marceline-ai/backend/src/routes/: chat.routes.ts
marceline-ai/electron/: main.js  preload.js
marceline-ai/frontend/: index.html  package-lock.json  package.json  vite.config.ts
marceline-ai/frontend/src/: App.tsx
marceline-ai/frontend/src/hooks/: useChat.ts  useTextToSpeech.ts  useVoiceRecognition.ts
marceline-ai/frontend/src/styles/: global.css
(+50 files in other folders)
