[workspace]
resolver = "2"
members = [
    "flxtra_core",
    "flxtra_net",
    "flxtra_filter",
    "flxtra_browser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Flxtra Browser Contributors"]
license = "MPL-2.0"
repository = "https://github.com/flxtra-browser/flxtra"

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Network
reqwest = { version = "0.11", features = ["rustls-tls", "gzip", "brotli"], default-features = false }
rustls = "0.22"
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }
url = "2.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
