[package]
name = "aegis_browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis_core = { path = "../aegis_core" }
aegis_net = { path = "../aegis_net" }
aegis_filter = { path = "../aegis_filter" }
aegis_html = { path = "../aegis_html" }
aegis_css = { path = "../aegis_css" }
aegis_js = { path = "../aegis_js" }
aegis_layout = { path = "../aegis_layout" }
aegis_render = { path = "../aegis_render" }
aegis_ui = { path = "../aegis_ui" }
aegis_sandbox = { path = "../aegis_sandbox" }
aegis_mcp = { path = "../aegis_mcp" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
