[package]
name = "aegis_filter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis_core = { path = "../aegis_core" }

regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true
