[package]
name = "aegis_html"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis_core = { path = "../aegis_core" }

html5ever.workspace = true
markup5ever_rcdom.workspace = true
tracing.workspace = true
serde.workspace = true
parking_lot.workspace = true

string_cache = "0.8"
tendril = "0.4"
