[package]
name = "flxtra_browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "Flxtra"
path = "src/main.rs"

[dependencies]
flxtra_core = { path = "../flxtra_core" }
flxtra_net = { path = "../flxtra_net" }
flxtra_filter = { path = "../flxtra_filter" }

# WebView2 for Chromium-based rendering
webview2 = "0.1"
winapi = { version = "0.3", features = ["winuser", "windef", "winbase"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse"
]}

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
