[package]
name = "flxtra_html"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flxtra_core = { path = "../flxtra_core" }

html5ever.workspace = true
markup5ever_rcdom.workspace = true
tracing.workspace = true
serde.workspace = true
parking_lot.workspace = true

string_cache = "0.8"
tendril = "0.4"
