[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
bootloader = "0.9"

[dependencies.ai]
path = "../ai"

[dependencies.game]
path = "../game"

[[bin]]
name = "kernel"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
